--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   bloc: ^8.0.3
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
+  http: ^0.13.4
+  either_dart: ^0.1.4
   flutter:
     sdk: flutter
 
