--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_services_binding: ^0.1.0
   path_provider: ^2.0.10
   carousel_slider: ^4.1.1
+  contacts_service: ^0.6.3
+  flutter_contacts: ^1.1.4
 
 dev_dependencies:
   flutter_test:
