--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^4.1.1
   contacts_service: ^0.6.3
   flutter_contacts: ^1.1.4
+  file_picker: ^4.6.1
 
 dev_dependencies:
   flutter_test:
