--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   contacts_service: ^0.6.3
   flutter_contacts: ^1.1.4
   file_picker: ^4.6.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
