--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_contacts: ^1.1.4
   file_picker: ^4.6.1
   intl: ^0.17.0
+  flutter_launcher_icons: ^0.9.3
+  flutter_native_splash: ^2.2.4
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/materials/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
