--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.17.0
   flutter_launcher_icons: ^0.9.3
   flutter_native_splash: ^2.2.4
+  share_plus: ^4.0.10
 
 
 dev_dependencies:
